Fixing spacing issue with i icon on help slide

--- a/docroot/profiles/labp/themes/la/lasbptheme/css/styles.css
+++ b/docroot/profiles/labp/themes/la/lasbptheme/css/styles.css
@@ -3455,22 +3455,15 @@ hr.hero__line--half {
   margin: 0px 10px 10px 0;
   padding: 0;
   min-height: 50px;
-  width: 80%;
+  width: 100%;
   border: 0px solid red;
   background-image: url('../images/wizard/icon_context_help.png?1461530233');
   background-position: top right;
   background-repeat: no-repeat;
   background-size: 40px 40px;
 }
-@media all and (min-width: 720px) {
-  /* line 156, ../sass/components/wizard/_wizard.scss */
-  .wizard__question--help {
-    font-size: 2em;
-    width: 70%;
-  }
-}
 
-/* line 178, ../sass/components/wizard/_wizard.scss */
+/* line 174, ../sass/components/wizard/_wizard.scss */
 .wizard__buttons {
   border: 0px solid white;
   margin: 30px 0 30px 0;
@@ -3478,7 +3471,7 @@ hr.hero__line--half {
   *zoom: 1;
 }
 
-/* line 184, ../sass/components/wizard/_wizard.scss */
+/* line 180, ../sass/components/wizard/_wizard.scss */
 .wizard__button {
   -moz-border-radius: 20px;
   -webkit-border-radius: 20px;
@@ -3491,30 +3484,30 @@ hr.hero__line--half {
   cursor: pointer;
 }
 
-/* line 187, ../sass/components/wizard/_wizard.scss */
+/* line 183, ../sass/components/wizard/_wizard.scss */
 a.wizard__button {
   color: #0f2940;
   text-decoration: none;
 }
 
-/* line 191, ../sass/components/wizard/_wizard.scss */
+/* line 187, ../sass/components/wizard/_wizard.scss */
 a.wizard__button--selected {
   background-color: #0f2940;
 }
 
-/* line 194, ../sass/components/wizard/_wizard.scss */
+/* line 190, ../sass/components/wizard/_wizard.scss */
 a.wizard__button--selected {
   text-decoration: none;
   color: white;
 }
 
-/* line 198, ../sass/components/wizard/_wizard.scss */
+/* line 194, ../sass/components/wizard/_wizard.scss */
 .wizard__button--selected-icon {
   height: 10px;
   margin: 0 0 0 3px;
 }
 
-/* line 208, ../sass/components/wizard/_wizard.scss */
+/* line 204, ../sass/components/wizard/_wizard.scss */
 .wizard__copy--section_intro {
   padding: 0;
   margin: 15px 60px 20px 20px;
@@ -3522,14 +3515,14 @@ a.wizard__button--selected {
   border: 0px solid red;
 }
 @media all and (min-width: 720px) {
-  /* line 208, ../sass/components/wizard/_wizard.scss */
+  /* line 204, ../sass/components/wizard/_wizard.scss */
   .wizard__copy--section_intro {
     font-size: 1.357em;
     width: 80%;
   }
 }
 @media all and (min-width: 960px) {
-  /* line 208, ../sass/components/wizard/_wizard.scss */
+  /* line 204, ../sass/components/wizard/_wizard.scss */
   .wizard__copy--section_intro {
     width: 80%;
     font-size: 1.357em;
@@ -3537,7 +3530,7 @@ a.wizard__button--selected {
   }
 }
 
-/* line 227, ../sass/components/wizard/_wizard.scss */
+/* line 223, ../sass/components/wizard/_wizard.scss */
 .wizard__icon {
   width: 40px;
   height: 40px;
@@ -3545,7 +3538,7 @@ a.wizard__button--selected {
   border: 0px solid red;
 }
 
-/* line 238, ../sass/components/wizard/_wizard.scss */
+/* line 234, ../sass/components/wizard/_wizard.scss */
 .wizard__icon_help {
   width: 40px;
   height: 40px;
@@ -3553,7 +3546,7 @@ a.wizard__button--selected {
   border: 0px solid red;
 }
 
-/* line 249, ../sass/components/wizard/_wizard.scss */
+/* line 245, ../sass/components/wizard/_wizard.scss */
 .wizard__header_block--help {
   border: 0px solid red;
   margin: 0;
@@ -3562,46 +3555,46 @@ a.wizard__button--selected {
   *zoom: 1;
 }
 
-/* line 257, ../sass/components/wizard/_wizard.scss */
+/* line 253, ../sass/components/wizard/_wizard.scss */
 .wizard__illustration {
   border: 0px solid blue;
   margin: 0 0 0 0;
   width: 100%;
 }
 @media all and (min-width: 960px) {
-  /* line 257, ../sass/components/wizard/_wizard.scss */
+  /* line 253, ../sass/components/wizard/_wizard.scss */
   .wizard__illustration {
     width: 95%;
   }
 }
 
-/* line 266, ../sass/components/wizard/_wizard.scss */
+/* line 262, ../sass/components/wizard/_wizard.scss */
 .wizard__illustration img {
   width: 100%;
   height: 100%;
 }
 @media all and (min-width: 960px) {
-  /* line 266, ../sass/components/wizard/_wizard.scss */
+  /* line 262, ../sass/components/wizard/_wizard.scss */
   .wizard__illustration img {
     width: 100%;
     height: 100%;
   }
 }
 
-/* line 277, ../sass/components/wizard/_wizard.scss */
+/* line 273, ../sass/components/wizard/_wizard.scss */
 .wizard__help_content {
   border: 0px solid red;
   width: 90%;
   margin: 20px 0 20px 0;
 }
 @media all and (min-width: 960px) {
-  /* line 277, ../sass/components/wizard/_wizard.scss */
+  /* line 273, ../sass/components/wizard/_wizard.scss */
   .wizard__help_content {
     width: 60%;
   }
 }
 
-/* line 286, ../sass/components/wizard/_wizard.scss */
+/* line 282, ../sass/components/wizard/_wizard.scss */
 .wizard__help_hr {
   height: 2px;
   max-width: 80px;
